examples/illtyped/expr.gr
data Expr a where
  Const : a -> Expr a;
  Div : Expr Float -> Expr Float -> Expr Float

main : Expr Int
main = Div (Const 10) (Const 5)
